* Added debug property to use for testing; (#2)
* Fixed unused imports and unnecessary code;
* Fixed dependencies pom.